# artibot_navigation

./: .gitignore  CMakeLists.txt  package.xml
artibot_navigation/: collision_avoidance_planner_node.py  exploration_planner_node.py  motion_controller_node.py  object_tracking_planner_node.py
config/: artibot_navigation.yaml  artibot_rviz.rviz  nav2_params.yaml
description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
launch/: artibot_navigation.launch.py  launch_sim.launch.py  localization_mapping.launch.py  nav2_bringup.launch.py  rsp.launch.py
